--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test:ci": "jest --ci --coverage --watchAll=false",
     "test:full": "npm run type-check && npm test",
     "test:import": "tsx scripts/test-precios-import.ts",
-    "test:import:cleanup": "tsx scripts/test-precios-import.ts cleanup"
+    "test:import:cleanup": "tsx scripts/test-precios-import.ts cleanup",
+    "bootstrap": "tsx scripts/bootstrap-import.ts"
   },
   "keywords": [
     "auto-parts",
@@ -61,6 +62,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "jest": "^30.0.5",
-    "jest-environment-jsdom": "^30.0.5"
+    "jest-environment-jsdom": "^30.0.5",
+    "tsx": "^4.19.2"
   }
 }
