--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
+    "dev:test": "cross-env NODE_ENV=test next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -12,9 +13,8 @@
     "test:coverage": "jest --coverage",
     "test:ci": "jest --ci --coverage --watchAll=false",
     "test:full": "npm run type-check && npm test",
-    "test:import": "tsx scripts/test-precios-import.ts",
-    "test:import:cleanup": "tsx scripts/test-precios-import.ts cleanup",
-    "bootstrap": "tsx scripts/bootstrap-import.ts"
+    "bootstrap": "tsx scripts/bootstrap-import.ts",
+    "bootstrap:test": "cross-env NODE_ENV=test tsx scripts/bootstrap-import.ts"
   },
   "keywords": [
     "auto-parts",
@@ -61,6 +61,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
+    "cross-env": "^10.0.0",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
     "tsx": "^4.19.2"
