--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "acr-automotive",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next dev",
-    "dev:test": "cross-env NODE_ENV=test next dev",
+    "dev": "cross-env NODE_ENV=test next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -33,6 +32,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
