--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
+    "use-debounce": "^10.0.6",
     "xlsx": "^0.18.5",
     "zod": "^4.0.17",
     "zustand": "^5.0.0"
