--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,28 +1,9 @@
 {
-  "extends": [
-    "eslint:recommended",
-    "next/core-web-vitals"
-  ],
-  "rules": {
-    "prefer-const": "error",
-    "no-var": "error",
-    "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
-  },
+  "extends": ["next/core-web-vitals"],
+  "rules": {},
   "env": {
     "browser": true,
     "node": true,
     "es6": true
-  },
-  "overrides": [
-    {
-      "files": ["supabase/functions/**/*.ts"],
-      "env": {
-        "browser": false,
-        "node": false
-      },
-      "globals": {
-        "Deno": "readonly"
-      }
-    }
-  ]
+  }
 }
