--- a/package.json
+++ b/package.json
@@ -68,8 +68,7 @@
     "typescript": "^5.8.3",
     "use-debounce": "^10.0.6",
     "xlsx": "^0.18.5",
-    "zod": "^4.0.17",
-    "zustand": "^5.0.0"
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.4",
