--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@supabase/ssr": "0.7.0",
     "@supabase/supabase-js": "^2.46.0",
     "@tanstack/react-query": "^5.0.0",
     "@types/lodash": "^4.17.20",
