--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
+    "sharp": "^0.34.4",
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
